--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
   border: 1px solid var(--lighter);
 
 }
-
+/*
  .hamburger {
   display: block;
   position: fixed;
@@ -80,10 +80,9 @@
   top: 0;
   left: 0;
   height: 55px;
-  opacity: 0
-}
+} */
 
-/* .navstick a {
+ .navstick a {
   font-size: 27px;
   color: black;
   text-decoration: none;
@@ -93,7 +92,10 @@
   clear: both;
   margin: 5px 20px;
   display: inline-block;
+  display: none
 }
+
+/*
 
 .navstick a:hover {
   background-color: #f7edf7;
