--- a/src/App.css
+++ b/src/App.css
@@ -348,8 +348,9 @@ img:hover {
   margin-top: 230px
 }
 
-.showimage {
+.show-img {
   width: 50%;
+  height: 400px;
   margin: auto;
 }
 
@@ -358,7 +359,13 @@ img:hover {
   margin: auto;
 }
 
-.backarrow, .forwardarrow {
+.buttons a {
+  width: 100%;
+  display: none;
+  text-decoration: none;
+}
+
+/* .backarrow, .forwardarrow {
   font-size: 27px;
   color: black;
   text-decoration: none;
@@ -379,16 +386,16 @@ img:hover {
 
 .backarrow {
   left: 160px
-}
+} */
 
-.backarrow:hover, .forwardarrow:hover {
+/* .backarrow:hover, .forwardarrow:hover {
   background-color: #f7d9f7;
   color: #9e5299;
 }
-
-.show img:hover {
+ */
+/* .show img:hover {
   opacity: 1
-}
+} */
 
 @media only screen and (max-width: 1000px) {
   .imageborder {
