added some albums

--- a/src/App.css
+++ b/src/App.css
@@ -122,12 +122,11 @@
 }
 
 .top {
-  color: black;
   text-align: center;
-  padding: 10px;
+  padding: 8px;
   display: block;
   margin: 30px auto;
-  font-size: 20px;
+  font-size: 15px;
   border: 2px solid var(--lighter);
   border-radius: 80px;
   position: fixed;
@@ -139,29 +138,10 @@
 }
 
 .top:hover {
-  background-color: var(--background);
+  background-color: var(--lighter);
+  color: var(--contrast);
   opacity: .5;
 }
-
-/* .socialmedia {
-  color: #d1a1cf;
-  width: 100%;
-  margin: 0 auto 10px auto;
-  text-align: center;
-}
-
-.socialmedia a {
-  padding: 10px;
-  font-size: 30px;
-}
-
-.socialmedia i:hover {
-  color: black
-}
-
-i {
-  color: #d1a1cf;
-} */
 
 
 /* Cards */
@@ -286,7 +266,7 @@ form {
   color: black;
   width: 90%;
   text-align: center;
-  margin: 250px auto;
+  margin: 0 auto;
 }
 
 .aboutcontainer {
@@ -320,7 +300,11 @@ form {
 }
 
 .show i {
-  color: black
+  color: var(--lighter)
+}
+
+.show i:hover {
+  color: var(--contrast)
 }
 
 /* Images */
@@ -346,11 +330,10 @@ img:hover {
 /*Show Pages*/
 
 .show {
-  margin: 200px;
+  margin: 0 80px;
   font-size: 30px;
   text-align: center;
   font-weight: bold;
-  margin-top: 230px
 }
 
 .show-img {
@@ -370,37 +353,34 @@ img:hover {
   text-decoration: none;
 }
 
-/* .backarrow, .forwardarrow {
-  font-size: 27px;
-  color: black;
+.backarrow, .forwardarrow {
+  font-size: 20px;
+  color: var(--lighter);
   text-decoration: none;
-  border: 1px solid black;
-  padding: 4px 5px 3px 5px;
+  border: 2px solid var(--lighter);
+  padding: 10px;
   border-radius: 5px;
   clear: both;
-  background-color: #f7c5f5;
   position: fixed;
-  top: 305px;
-  padding: 40px 15px;
+  top: 250px;
 }
 
 .forwardarrow {
-  right: 160px;
-  padding: 40px 15px;
+  right: 20px;
 }
 
 .backarrow {
-  left: 160px
-} */
-
-/* .backarrow:hover, .forwardarrow:hover {
-  background-color: #f7d9f7;
-  color: #9e5299;
+  left: 20px
 }
- */
-/* .show img:hover {
+
+ .backarrow:hover, .forwardarrow:hover {
+  background-color: var(--lighter);
+  color: var(--contrast);
+}
+
+.show img:hover {
   opacity: 1
-} */
+}
 
 @media only screen and (max-width: 1000px) {
   .imageborder {
@@ -479,7 +459,7 @@ img:hover {
 
   .show {
     width: 70%;
-    margin: 200px auto;
+    margin: 80px auto;
   }
 
   .showimage {
@@ -497,22 +477,21 @@ img:hover {
   }
 
   .show {
-    margin: 200px auto;
+    margin: 0px auto;
     font-size: 30px;
     text-align: center;
     font-weight: bold;
-    margin-top: 230px;
     width: 100%
   }
 
   .showimage {
     width: 70%;
-    margin: 230px auto 10px auto;
+    margin: 0 auto 10px auto;
   }
 
   .showimagewide {
     width: 90%;
-    margin: 230px auto 10px auto;
+    margin: 0 auto 10px auto;
   }
 
   .navbar {
