--- a/src/App.css
+++ b/src/App.css
@@ -553,18 +553,19 @@ img:hover {
 
 @media only screen and (max-width: 400px) {
   .navlinks {
-    width: 70%;
+    float: left;
+    padding: 10px
   }
   .socialmedia {
-    width: 30%;
-    text-align: center;
+    float: left;
+    padding: 10px
   }
   .navlinks a {
-    padding: 3px;
-    font-size: 18px
+    font-size: 16px;
+    padding: 3px
   }
   .socialmedia a {
     padding: 3px;
-        font-size: 18px
+    font-size: 20px
   }
 }
